[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://libraries/Blocks.tres" type="MeshLibrary" id=2]
[ext_resource path="res://assets/enemyBalls.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Test Level.gd" type="Script" id=4]
[ext_resource path="res://libraries/safe_block.tres" type="MeshLibrary" id=5]
[ext_resource path="res://assets/rotate_of_death.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://png/text_text.png" type="Texture" id=8]
[ext_resource path="res://png/text_2.png" type="Texture" id=9]
[ext_resource path="res://png/text_3.png" type="Texture" id=10]

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.769899, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "checkpoint"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 6, 0.769899, -4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "respawn"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.769899, 0 ) ]
}

[sub_resource type="CubeMesh" id=1]
size = Vector3( 30, 2, 2 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )
metallic = 1.0
roughness = 0.0

[sub_resource type="BoxShape" id=3]
extents = Vector3( 15, 1, 1 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -17, 0.776, 4 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "enemyball1"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -17, 0.776, 4 ), Vector3( 7, 0.776, 4 ), Vector3( -17, 0.776, 4 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 7, 0.776, 6 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "enemyball2"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 7, 0.776, 6 ), Vector3( 7, 0.776, 11 ), Vector3( 7, 0.776, 6 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "rotate"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 270, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="BoxShape" id=15]
extents = Vector3( 2, 1, 2 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 3, 2, 3 )

[node name="Test Level" type="Spatial"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.769899, 0 )

[node name="respawn_point" type="AnimationPlayer" parent="."]
root_node = NodePath("../Player")
anims/RESET = SubResource( 5 )
anims/checkpoint = SubResource( 16 )
anims/respawn = SubResource( 4 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 29, 21 )

[node name="floor" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( -65536, 0, 1, -65535, 0, 0, -65534, 0, 1, -65533, 0, 0, -9, 0, 0, -8, 0, 1, -7, 0, 0, -6, 0, 1, -5, 0, 0, -4, 0, 1, -3, 0, 0, -2, 0, 1, -1, 0, 0, -65536, 1, 0, -65535, 1, 1, -65534, 1, 0, -65533, 1, 1, -9, 1, 1, -8, 1, 0, -7, 1, 1, -6, 1, 0, -5, 1, 1, -4, 1, 0, -3, 1, 1, -2, 1, 0, -1, 1, 1, -65536, 2, 1, -65535, 2, 0, -65534, 2, 1, -65533, 2, 0, -9, 2, 0, -8, 2, 1, -7, 2, 0, -6, 2, 1, -5, 2, 0, -4, 2, 1, -3, 2, 0, -2, 2, 1, -1, 2, 0, -65536, 3, 0, -65535, 3, 1, -65534, 3, 0, -65533, 3, 1, -6, 3, 0, -5, 3, 1, -4, 3, 0, -3, 3, 1, -2, 3, 0, -1, 3, 1, -65536, 4, 1, -65535, 4, 0, -65534, 4, 1, -65533, 4, 0, -6, 4, 1, -5, 4, 0, -4, 4, 1, -3, 4, 0, -2, 4, 1, -1, 4, 0, -65536, 5, 0, -65535, 5, 1, -65534, 5, 0, -65533, 5, 1, -6, 5, 0, -5, 5, 1, -4, 5, 0, -3, 5, 1, -2, 5, 0, -1, 5, 1, -65536, 65533, 0, -65535, 65533, 1, -9, 65533, 1, -8, 65533, 0, -7, 65533, 1, -6, 65533, 0, -5, 65533, 1, -4, 65533, 0, -3, 65533, 1, -2, 65533, 0, -1, 65533, 1, -65536, 65534, 1, -65535, 65534, 0, -9, 65534, 0, -8, 65534, 1, -7, 65534, 0, -6, 65534, 1, -5, 65534, 0, -4, 65534, 1, -3, 65534, 0, -2, 65534, 1, -1, 65534, 0, -65536, 65535, 0, -65535, 65535, 1, -65534, 65535, 0, -65533, 65535, 1, -9, 65535, 1, -8, 65535, 0, -7, 65535, 1, -6, 65535, 0, -5, 65535, 1, -4, 65535, 0, -3, 65535, 1, -2, 65535, 0, -1, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="walls2" type="Spatial" parent="."]

[node name="wall1" type="StaticBody" parent="walls2"]
transform = Transform( 0.867, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 13 )

[node name="MeshInstance" type="MeshInstance" parent="walls2/wall1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="walls2/wall1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
shape = SubResource( 3 )

[node name="wall2" type="StaticBody" parent="walls2"]
transform = Transform( -2.91992e-08, 0, 1, 0, 1, 0, -0.668, 0, -4.37114e-08, 9, 0, 14 )

[node name="MeshInstance" type="MeshInstance" parent="walls2/wall2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="walls2/wall2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
shape = SubResource( 3 )

[node name="wall3" type="StaticBody" parent="walls2"]
transform = Transform( -2.91992e-08, 0, 1, 0, 1, 0, -0.668, 0, -4.37114e-08, -19, 0, 14 )

[node name="MeshInstance" type="MeshInstance" parent="walls2/wall3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="walls2/wall3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
shape = SubResource( 3 )

[node name="wall4" type="StaticBody" parent="walls2"]
transform = Transform( 1, 0, 4.09771e-15, 0, 1, 0, -4.09771e-15, 0, 1, -20, 0, -7 )

[node name="MeshInstance" type="MeshInstance" parent="walls2/wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="walls2/wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0 )
shape = SubResource( 3 )

[node name="eneimies" type="Spatial" parent="."]

[node name="enemyBalls1" parent="eneimies" instance=ExtResource( 3 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -17, 0.776, 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="eneimies/enemyBalls1"]
autoplay = "enemyball1"
anims/RESET = SubResource( 6 )
anims/enemyball1 = SubResource( 7 )

[node name="enemyBalls2" parent="eneimies" instance=ExtResource( 3 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 7, 0.776, 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="eneimies/enemyBalls2"]
autoplay = "enemyball2"
anims/RESET = SubResource( 8 )
anims/enemyball2 = SubResource( 9 )

[node name="rotate_of_death" parent="eneimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -10, 0.776, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="eneimies/rotate_of_death"]
autoplay = "rotate"
anims/RESET = SubResource( 14 )
anims/rotate = SubResource( 13 )

[node name="checkpoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.77, 0 )

[node name="checkpoint_area" type="Area" parent="checkpoint"]

[node name="CollisionShape" type="CollisionShape" parent="checkpoint/checkpoint_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -4 )
shape = SubResource( 15 )

[node name="safeNode" type="Spatial" parent="."]

[node name="safe_area" type="Area" parent="safeNode"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 9 )

[node name="CollisionShape" type="CollisionShape" parent="safeNode/safe_area"]
shape = SubResource( 12 )

[node name="safe" type="GridMap" parent="safeNode"]
mesh_library = ExtResource( 5 )
data = {
"cells": PoolIntArray( -9, 3, 0, -8, 3, 0, -7, 3, 0, -9, 4, 0, -8, 4, 0, -7, 4, 0, -9, 5, 0, -8, 5, 0, -7, 5, 0, -65534, 65533, 0, -65533, 65533, 0, -65534, 65534, 0, -65533, 65534, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="coins" type="Spatial" parent="."]

[node name="coin" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 7.08081, 0.776, 9.34237 )

[node name="coin2" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -13, 0.776, 0 )

[node name="coin3" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -10, 0.776, 3 )

[node name="note" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.189627, 0.981856, 0, -0.981856, 0.189627, -11.9084, 5.90712, 19.1554 )
texture = ExtResource( 8 )

[node name="note2" type="Sprite3D" parent="."]
transform = Transform( 0.808216, 0.578201, -0.111668, 0, 0.189627, 0.981856, 0.588886, -0.793552, 0.153259, 13.2414, 5.90712, 6.70406 )
texture = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.538285, -0.814395, 0.216816, 0, 0.257268, 0.96634, -0.842763, -0.520167, 0.138483, 6.69968, 3.35905, -9.59252 )
texture = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]

[connection signal="reset_level" from="." to="coins/coin" method="_on_Test_Level_reset_level"]
[connection signal="reset_level" from="." to="coins/coin2" method="_on_Test_Level_reset_level"]
[connection signal="reset_level" from="." to="coins/coin3" method="_on_Test_Level_reset_level"]
[connection signal="body_entered" from="eneimies/enemyBalls1" to="." method="_on_enemyBalls1_body_entered"]
[connection signal="body_entered" from="eneimies/enemyBalls2" to="." method="_on_enemyBalls1_body_entered"]
[connection signal="player_hit" from="eneimies/rotate_of_death" to="." method="_on_rotate_of_death_player_hit"]
[connection signal="body_entered" from="checkpoint/checkpoint_area" to="." method="_on_checkpoint_area_body_entered"]
[connection signal="body_entered" from="safeNode/safe_area" to="." method="_on_safe_area_body_entered"]
[connection signal="coin_collect" from="coins/coin" to="." method="_on_coin_coin_collect"]
[connection signal="coin_collect" from="coins/coin2" to="." method="_on_coin_coin_collect"]
[connection signal="coin_collect" from="coins/coin3" to="." method="_on_coin_coin_collect"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
